# eterus-configurato

./: main.py  pyproject.toml
.github/workflows/: main.yml
eterus_ios/: main  main_for_ios.py  pyproject.toml
