[project]
name = "eterus"
version = "0.1.0"
description = "Eterus Voltage Drop Calculator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flet>=0.21.0",
]

[tool.flet]
# Путь к главному файлу приложения
main = "main.py"

[tool.flet.app]
# Имя приложения, отображаемое на экране смартфона
name = "ЭТЕРУС"
